# rs-coverage

./: .gitignore  Cargo.toml
codegen/: Cargo.toml
codegen/examples/: test.rs
codegen/examples/a/: b.rs
codegen/src/: lib.rs
report/: Cargo.toml
report/src/: main.rs
