[package]
name = "report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
syn = { version = "1.0.82", features = ["full", "visit"] }
proc-macro2 = { version = "1.0.34", features = ["span-locations"]}